--- a/ThesisAccessibilityHelper/LaunchScreen.storyboard
+++ b/ThesisAccessibilityHelper/LaunchScreen.storyboard
@@ -21,6 +21,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <accessibility key="accessibilityConfiguration" identifier="TLaunchScreen"/>
                         <constraints>
                             <constraint firstItem="1kX-0R-2Pv" firstAttribute="centerX" secondItem="Bcu-3y-fUS" secondAttribute="centerX" id="JdP-WA-alj"/>
                             <constraint firstItem="1kX-0R-2Pv" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="ZVf-8i-KB5"/>
